--- a/package.json
+++ b/package.json
@@ -23,35 +23,34 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "canvg": "^4.0.2",
-    "class-variance-authority": "^0.4.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
     "cmdk": "1.0.0",
-    "jotai": "^2.10.0",
+    "jotai": "^2.10.1",
     "lodash-es": "^4.17.21",
-    "lucide-react": "0.105.0-alpha.4",
-    "next": "^13.4.8",
-    "next-themes": "^0.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.53.0",
+    "lucide-react": "0.453.0",
+    "next": "^14.2.16",
+    "next-themes": "^0.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "react-resizable-panels": "^2.1.4",
-    "sharp": "^0.31.3",
+    "sharp": "^0.33.5",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^1.13.2",
-    "tailwindcss-animate": "^1.0.6",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^17.0.45",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "@typescript-eslint/parser": "^5.61.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "prettier": "^2.8.8",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^4.9.5"
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3"
   }
 }
